--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>boxes</title>
-<link rel="stylesheet" type="text/css" href="analog.css">
+<link rel="https://github.com/Ervin1928/6657/blob/01face34b6a55918ec9a926ea94d1fff071ccd0e/analog.css" type="text/css" href="analog.css">
 </head>
 <body style="background-color: powderblue;"></body>
   
