--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -30,7 +30,7 @@
 </center>
 <p>
   <center>
-    <img src="images/keys.jpg" alt="Fender Rhodes, Hohner Clavinet, and Wurlitzer EP200" />
+    <img src="https://github.com/Ervin1928/6657/blob/9142ec7913f8fda0f2d76a22f61baf3f4c023e5e/keys%20(14).jpg" alt="Fender Rhodes, Hohner Clavinet, and Wurlitzer EP200" />
   </center>
 </p>
 <center>
