--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,7 +9,7 @@
 <center>
   <div id="page">
     <div id="logo">
-      <img src="images/logo.gif" alt="The Analog Specialists" />
+      <img src="https://github.com/Ervin1928/6657/blob/864acad91d4415e7ac30fd2fabe7e083b585eeea/logo%20(14).gif" alt="The Analog Specialists" />
 </center>
 
 <center>
