--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>boxes</title>
-<link rel="analog.css" href="analog.css">
+<link rel="https://github.com/Ervin1928/6657/blob/ac688a38cc0c8cd893e70e1ffb98f73711cfe0c4/analog.css" href="analog.css">
 </head>
 <body style="background-color: powderblue;"></body>
   
