--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>ervin, 2 and form</title>
-<link rel="https://github.com/Ervin1928/6657/blob/8af27e12c1ce02658dcd431d64779cfd0ccb665d/Style.css" type="text/css" href="css/style.css">
+<link rel="https://github.com/Ervin1928/6657/blob/8af27e12c1ce02658dcd431d64779cfd0ccb665d/Style.css" type="text/css" href="css/Style.css">
 </head>
 <body style="background-color:powderblue;"></body>
 <center>
